<resources>
    <string name="app_name">Rubiks Race</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cuadro_de_scrambler">Cuadro de Scrambler</string>
    <string name="cuadro_de_grid"> Cuadro de Grid de Jugador</string>

    <string name="scramble">SCRAMBLE!</string>
    <string name="rubik_s_race">Rubik\'s Race!</string>
    <string name="scramblergrid">ScramblerGrid</string>
    <string name="juego_nuevo">Juego Nuevo</string>
    <string name="slam">SLAM!</string>
    <string name="highscores">Highscores</string>
    <string name="main_menu_new_game">Nuevo Juego</string>
    <string name="main_menu_colorblind_text">Modo Daltonico</string>
    <string name="main_menu_highscores">Highscores</string>
    <string name="winner_felicidades">¡FELICIDADES!</string>
    <string name="winner_time_tag">Has ganado en</string>
    <string name="winner_time_holder">00:00:00</string>
    <string name="winner_newrecord">¡NUEVO RECORD!</string>
    <string name="winner_moves_holder">00 Movimientos</string>

    <string name="regla_1">1. Puedes hacer Scramble las veces que quieras.</string>
    <string name="regla_2">2. Para que un intercambio sea exitoso, este debe ser de un cuadro ocupado hacia uno desocupado.</string>
    <string name="regla_3">3. Los 9 cuadros del centro del Grid deben coincidir con los 9 cuadros del Scrambler para poder ganar.</string>
    <string name="regla_4">4. El tiempo no se reinicia al dar Scramble.</string>
    <string name="regla_5">5. Si se intenta hacer Slam cuando no se ha ganado, el telefono vibrará</string>
    <string name="regla_6">6. Cuando se haga Slam y la combinación sea correcta, se mostrará una ventana indicando los resultados.</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="tutorial_p0_1">El Scrambler dicta la combinación a recrear.</string>
    <string name="tutorial_p0_2">Puedes cambiar la combinacion del Scrambler al pulsar sobre el.</string>

    <string name="tutorial_p1_1">El objetivo del juego es recrear la combinacion del Scramble en el centro del Grid (cuadros morados).</string>
    <string name="tutorial_p1_2">El espacio negro indica que no hay un cuadro en ese lugar. Solo puedes mover fichas que estén pegadas a este espacio.</string>
    <string name="tutorial_p1_3">Para mover un cuadro, seleccionalo y seguido pulsa sobre el espacio negro.</string>

    <string name="tutorial_p2_1">Cuando termines, pulsa el boton:</string>
    <string name="tutorial_p2_2">Si la combinación es correcta, te mandará a una pantalla con los resultados.</string>
    <string name="tutorial_p2_3">Si no, el telefono vibrará y podras seguir moviendo los cuadros.</string>

</resources>