<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tutorial_p2_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_turquesa"
    tools:context=".tutorial.fragments.Page2"
    tools:layout_editor_absoluteX="10dp"
    tools:layout_editor_absoluteY="154dp">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/tutorial_p2_boton"
        android:layout_width="340dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/white"
        android:text="@string/slam"
        android:textColor="@color/fondo_turquesa"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/tutorial_p2_texto1"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:text="@string/tutorial_p2_1"
        android:textAlignment="center"
        android:textColor="@color/fondo_turquesa"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/tutorial_p2_texto2"
        android:layout_width="360dp"
        android:layout_height="110dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:text="@string/tutorial_p2_2"
        android:textAlignment="center"
        android:textColor="@color/fondo_turquesa"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/tutorial_p2_texto3"
        android:layout_width="360dp"
        android:layout_height="110dp"
        android:background="@drawable/rounded_rectangle"
        android:gravity="center"
        android:text="@string/tutorial_p2_3"
        android:textAlignment="center"
        android:textColor="@color/fondo_turquesa"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.724" />

</androidx.constraintlayout.widget.ConstraintLayout>