<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:background="@color/fondo_turquesa"
    android:id="@+id/main_menu_layout">

    <TextView
        android:id="@+id/main_menu_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/rubik_s_race"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="60sp"
        app:layout_constraintVertical_bias="0.25"
        android:textColor="@color/white"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_menu_new_game_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/main_menu_new_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_title_text"
        app:layout_constraintVertical_bias="0.225"
        android:onClick="newGame"
        android:backgroundTint="@color/white"
        android:textColor="@color/fondo_turquesa"
        app:cornerRadius="100dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_menu_highscores_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/main_menu_highscores"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_title_text"
        app:layout_constraintVertical_bias="0.375"
        android:onClick="goToHighscores"
        android:backgroundTint="@color/white"
        android:textColor="@color/fondo_turquesa"
        app:cornerRadius="100dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/main_menu_colorblind_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_title_text"
        app:layout_constraintVertical_bias="0.502" />

    <TextView
        android:id="@+id/main_menu_colorblind_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/main_menu_colorblind_text"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_menu_title_text"
        app:layout_constraintVertical_bias="0.502" />


</androidx.constraintlayout.widget.ConstraintLayout>